# ciscoconfparse2

./: .codacy.yml  .coverage  .coveragerc  .gitignore  .lgtm.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc.0  .yamllint.yml  CHANGES.md  Makefile  README.md  README_workflow.md  coverage.xml  embold.yaml  pyproject.toml  sonar-project.properties  tox.ini
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.md
.github/workflows/: README.md  cicd-publish.yml  create-release.yml  lock_issue_pr.yml  sonarcloud.yml  stale-issue-action.yml  tests.yml
ciscoconfparse2/: __init__.py  __main__.py  ccp_abc.py  ccp_util.py  ciscoconfparse2.py  cli_script.py  errors.py  models_asa.py  models_base.py  models_cisco.py  models_iosxr.py  models_junos.py  models_nxos.py  protocol_values.py
dev_tools/: compare_v4_v6_methods.py  perf_tests.py
dev_tools/deploy_docs/: Cargo.toml  Makefile  README.md  deploy_docs  deploy_docs.go  go.mod
dev_tools/deploy_docs.go/: Makefile
dev_tools/deploy_docs.rs/: Cargo.toml  Makefile
dev_tools/deploy_docs.rs/src/: deploy_docs.rs
misc/: options_ios.hier_config.yml
requirements/: requirements-dev.txt  requirements.txt
sphinx-doc/: Makefile  README.md  api.md  api.rst  api_Ccp_Abc.md  api_Ccp_Abc.rst  api_CiscoConfParse.md  api_CiscoConfParse.rst  api_CiscoPassword.md  api_CiscoPassword.rst  api_ConfigList.md  api_ConfigList.rst  api_Models_Cisco.md  api_Models_Cisco.rst  api_Models_Nxos.md  api_Models_Nxos.rst  api_ccp_util.md  api_ccp_util.rst  cli.md  cli.rst  conf.py  development.md  example_ciscorange.md  example_complex.md  example_complex.rst  example_simple.md  example_simple.rst  examples.md  examples.rst  factory_hsrp.md  index.md  index.rst  installation.md  installation.rst  intro.md  intro.rst  requirements.txt  tutorial.md  tutorial.rst  tutorial_build_diffs.md  (+7 more)
tests/: conftest.py  coverage.xml  performance_case.py  test_BraceParse.py  test_Ccp_Abc.py  test_Ccp_Util.py  test_CiscoConfParse.py  test_Cli_Script.py  test_Models_Asa.py  test_Models_Cisco.py  test_Models_Junos.py
tests/fixtures/configs/: build_big_config.py  sample_03.f5  sample_03.iosxr  sample_04.iosxr  sample_05.iosxr  sample_06.iosxr  sample_07.iosxr  sample_08.ios  sample_10.ios
tests/fixtures/plain_text/: sample_01.txt
