# pyproject.toml format -> See PEP 621

[project]
name = "ciscoconfparse2"
description = "Parse, Audit, Query, Build, and Modify Cisco IOS-style and JunOS-style configs"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
  # NOTE changing attrs versions may require code / test changes
  "attrs>25.4.0,<27.0.0",
  "dnspython==2.8.0",
  "macaddress==2.0.2",
  "traitlets==5.15.0",
  "loguru>=0.7.2",
  "hier_config==2.3.1",
  "pyparsing==3.3.2",
  "toml==0.10.2",
  # NOTE changing typeguard versions may require code / test changes
  "typeguard==4.5.2",
  "PyYAML>=6.0.3",
  "rich>=14.3.3",
  # "passlib==1.7.4",   <-- deprecating passlib (now unmaintained) in favor of libpass
  #     https://github.com/notypecheck/passlib
  "libpass==1.9.3",
  # Hypothesis for hard-core ip_address tests
  "hypothesis==6.152.7",
]
authors = [
  { name = "Mike Pennington", email = "mike@pennington.net" },
]
keywords = [
  "Parse",
  "audit",
  "query",
  "modify",
  "Cisco IOS",
  "Cisco",
  "NXOS",
  "ASA",
  "Juniper",
]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Communications",
  "Topic :: Internet",
  "Topic :: System :: Networking",
  "Topic :: System :: Networking :: Monitoring",
]

[project.optional-dependencies]
# Ensure wheel is upgraded... ref Github Issue #257
dev = [
  "hatch>=1.16.5",
  "hatchling>=1.29.0",
  "pytest>=9.0.1",
  "pre-commit>=4.5.1",
  "black==26.1.0",
  "ty==0.0.17",
  "pyupgrade==3.21.2",
  "yamlfix==1.19.1",
  #"pylama==8.4.1",
  "ruff==0.15.1",
  "pylint==4.0.4",
  "coverage>=7.3.2",
  "pytest-cov>=4.1.0",
  "pyroma==5.0.1",
  "commitizen>=2.40.0",
  "python-lsp-server>=1.12.2",
  "tox==4.30.3",
]
doc = [
  "Sphinx>=9.0.4",
  "sphinx-rtd-theme>=2.0.0",
  "numpydoc==1.9.0",
  "pydocstyle==6.3.0",
]

[project.scripts]
ccp = "ciscoconfparse2.cli_script:ccp_script_entry"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project.urls]
homepage = "http://github.com/mpenning/ciscoconfparse2"
changelog = "https://github.com/mpenning/ciscoconfparse2/blob/main/CHANGES.md"
repository = "https://github.com/mpenning/ciscoconfparse2"
documentation = "http://www.pennington.net/py/ciscoconfparse2/"

[tool.hatch.version]
path = "ciscoconfparse2/__about__.py"
scheme = "standard"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.git",
  "/dev_tools",
  "/dist",
]

[tool.hatch.build.targets.wheel]
packages = [
    "ciscoconfparse2/",
    "tests/",
]

[tool.hatch.envs.default.scripts]
pytest = "cd tests && pytest ."

[tool.pylint]
# Minimum Python version to use for version dependent checks.
# Will default to the version used to run pylint.
py-version = "3.10"

[tool.pylint."messages control"]
disable = """
    C0301
"""

[tool.yamlfix]
preserve_quotes = true
line_length = 1000
sequence_style = "block_style"
whitelines = 1
quote_basic_values = true
quote_representation='"'

[tool.black]
line-length=320

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 320
indent-width = 4
# Minimum Python version to use
target-version = "py310"

# Assume all rules can be fixed by ruff
fixable = ["ALL"]


[tool.ruff.format]
# The formatter shares some settings like line-length from the top-level [tool.ruff] section.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
# Experimental docstring formatter
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint]
# Enable ruff experimental features
preview = true

# Enable core linting rules:
select = [
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "E",        # PyCodeStyle errors
    "F",        # Pyflakes rules
    "FA",       # Verifies files use from __future__ import annotations if PEP 563 applies to the file.
    "I",        # I: isort-compatible import sorting
    "PTH",      # Use pathlib instead of os.path
    "PYI",      # Linting rules for some type annotations
    "Q",        # Linting rules for quoting
    "RUF",      # Ruff linting rules
    "S",        # Disallow things like "exec"; also restricts "assert"
    "SIM",      # Common flake8 simplification rules
    "UP",       # Warn if certain things can changed due to newer Python versions
    "W",        # PyCodeStyle warnings
]

extend-select = [
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

ignore = [
    "E266",     # Do not modify ###### comments to a single #
    "F401",     # Ignore obnoxious ruff imports (i.e import foo as foo)
    "RET504",   # Ignore variable assignment before return
    "S101",     # Do not complain about assert (such as in test cases)
    "SIM108",   # Do not recommend python ternary if-then-else oneliners
    "TD001",    # Ignore FIXME complaints
    "TD002",    # Ignore missing TODO author
    "TD003",    # Ignore missing TODO issue url
    "TD004",    # Ignore missing TODO with colon
    "RUF052",   # Ignore ruff lints for accessing 'private' _variable names
]
